// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagos UI gating snapshots admin — full write surface 1`] = `
{
  "canCreateInvoice": true,
  "isAuthenticated": true,
  "role": "admin",
  "showManualRegister": true,
}
`;

exports[`Pagos UI gating snapshots analyst — read-only mobile surface 1`] = `
{
  "canCreateInvoice": false,
  "isAuthenticated": true,
  "role": "analyst",
  "showManualRegister": false,
}
`;

exports[`Pagos UI gating snapshots salesperson — field write surface 1`] = `
{
  "canCreateInvoice": true,
  "isAuthenticated": true,
  "role": "salesperson",
  "showManualRegister": true,
}
`;

exports[`Pagos UI gating snapshots unauthenticated — no write actions 1`] = `
{
  "canCreateInvoice": false,
  "isAuthenticated": false,
  "role": "admin",
  "showManualRegister": true,
}
`;
